# fred2_machine_states

./: .gitignore  Alteracoes_sensores.md  CMakeLists.txt  README.md  Robot_State_Machine.drawio  autonomous_fsm.drawio  package.xml
config/: params.yaml
fred2_machine_states/scripts/: autonomous_state_machine.py  autonomous_state_machine_ros.py  check_if_at_waypoint_helper.py  operation_modes.py  operation_modes_ros.py  requirements.txt  robot_states.py  test_autonomous_state_machine.py  test_check_if_at_waypoint_helper.py  test_operation_modes.py
launch/: autonomous_fsm.launch.py  machine_states.launch.py  machine_states_launch.yaml  operation_mode.launch.py
